# libtorch_2022_demo

./: CMakeLists.txt  README.md  libtorch_2022_demo.cpp  libtorch_2022_demo.h
